// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SessionPlay Dialog closed Renders the component 1`] = `
<fragment-stub>
  <div class="v-list-item__icon mr-0"><i aria-hidden="true" data-test="play-icon" class="v-icon notranslate v-icon--left mdi mdi-play-circle theme--light"></i></div>
  <div class="v-list-item__content">
    <div data-test="play-title" class="v-list-item__title text-left">Play</div>
  </div>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`SessionPlay Dialog opened with play not paused Renders the component 1`] = `
<fragment-stub>
  <div class="v-list-item__icon mr-0"><i aria-hidden="true" data-test="play-icon" class="v-icon notranslate v-icon--left mdi mdi-play-circle theme--light"></i></div>
  <div class="v-list-item__content">
    <div data-test="play-title" class="v-list-item__title text-left">Play</div>
  </div>
  <div class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`SessionPlay Dialog opened with play paused Renders the component 1`] = `
<fragment-stub>
  <div class="v-list-item__icon mr-0"><i aria-hidden="true" data-test="play-icon" class="v-icon notranslate v-icon--left mdi mdi-play-circle theme--light"></i></div>
  <div class="v-list-item__content">
    <div data-test="play-title" class="v-list-item__title text-left">Play</div>
  </div>
  <div class="v-dialog__container"></div>
</fragment-stub>
`;
